@@ -1,5 +1,8 @@
 2008-07-29  David Bateman  <dbateman@free.fr>
 
+	* interpreter/numbers.txi, interpreter/plot.txi,
+	interpreter/quad.txi: Miscellaneous documentation fixes.
+
 	* control.txi, finance.txi, quaternion.txi: Delete.
 	* octave.texi: Remove all references to the above.
 	* Makefile.in: ditto.
